[gd_scene load_steps=5 format=3 uid="uid://bv86eqaow532w"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_lmffo"]
[ext_resource type="Texture2D" uid="uid://dhefpskuavyqd" path="res://sprite/food and kitchenware icons/viande_spawner.png" id="2_jyyko"]
[ext_resource type="Script" path="res://scripts/interaction.gd" id="3_biehe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rrqvv"]
radius = 21.0238

[node name="spawner_viande" type="Node2D" node_paths=PackedStringArray("sprite", "interaction_area")]
script = ExtResource("1_lmffo")
sprite = NodePath("Sprite2D")
interaction_area = NodePath("InteractionArea")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jyyko")

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource("3_biehe")
action_name = "faire apparaitre"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_rrqvv")

[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="_on_body_exited"]
